로그인 인증 처리 authentication filter (JwtAuthenticationFilter)에서 모든 응답 헤더에 유저 정보 추가 프론트에서 헤더 확인 후 로그인 비 로그인 처리

--- a/humorpage/src/static/css/App.css
+++ b/humorpage/src/static/css/App.css
@@ -42,7 +42,9 @@ button:focus{
 	font-size: 1.2rem;
 	font-weight: 800;
 }
-
+.head_logo_text{
+	cursor: pointer;
+}
 .head_logo_img{
 	cursor: pointer;
 	max-width: 40px;
