프론트 로그인 상태 유지완성

--- a/humorpage/src/static/css/App.css
+++ b/humorpage/src/static/css/App.css
@@ -53,7 +53,7 @@ button:focus{
 	margin-right: 5px;
 	margin-top: 5px;
 }
-.head_login{
+.head_sign{
 	text-align: center;
 	line-height: 200%;
 	border-radius: 5px;
