댓글 업로드 (사진 포함) 글 좋아요 프론트까지 완성

--- a/humorpage/src/static/css/App.css
+++ b/humorpage/src/static/css/App.css
@@ -60,6 +60,7 @@ button:focus{
 	background-color: #ec4646;
 	color:#ffffff;
 	width: 10%;
+	cursor: pointer;
 	height: 80%;
 	margin-right: 10px;
 	margin-left: 10px;
