글 작성 임시 저장소 필요 temporaryFileStore 해당 저장소로 유저 글 작성 완료시 사진은 그대로 저장소에 넘기고 영상은 코덱 변환하여 저장소에 넘겨야함

--- a/humorpage/src/static/css/Comment.css
+++ b/humorpage/src/static/css/Comment.css
@@ -41,6 +41,9 @@
 .comment-context{
 	padding-top: 5px;	
 }
+.comment_text{
+	margin-bottom: 5px;
+}
 .comment-box{
 	background: #e8e8e8;
 	width: 100%;
@@ -63,7 +66,7 @@
 	border-style: none;
 	resize: none;
 }
-.comment-btn{
+.comment_btn{
 	cursor: pointer;
 	float: right;
 	right: 10px;
@@ -86,4 +89,7 @@
 }
 .comment_preimgzone{
 	height: 0px;
+}
+.comment_context_img{
+	margin-top: 5px;
 }
