--- a/humorpage/src/static/css/Content.css
+++ b/humorpage/src/static/css/Content.css
@@ -49,6 +49,8 @@
     margin-top: 3px;
 }
 .content_btn{
+    display: flex;
+    justify-content: space-evenly;
     width: 33%;
     border: 0px;
     background-color: #e7e6e1;
