--- a/humorpage/src/static/css/App.css
+++ b/humorpage/src/static/css/App.css
@@ -19,7 +19,13 @@ p{
 	margin-block-start: 0em;
 	margin-block-end: 0em;
 }
-
+a{
+	user-select: none;
+	-webkit-user-select: none; /* webkit (safari, chrome) browsers */
+    -moz-user-select: none; /* mozilla browsers */
+    -khtml-user-select: none; /* webkit (konqueror) browsers */
+    -ms-user-select: none; /* IE10+ */
+}
 button:focus{
     border: none;
     outline: none;
@@ -84,4 +90,8 @@ button:focus{
 .main{
 	width: 100%;
 	background: #ffffff;
+}
+
+button > span{
+	cursor: inherit;
 }
