--- a/humorpage/src/static/css/Comment.css
+++ b/humorpage/src/static/css/Comment.css
@@ -6,9 +6,15 @@
 	border-bottom: solid gainsboro 1px;
 	display: flex;
 }
-
+.recomment{
+	padding-top: 10px;
+	padding-bottom: 10px;
+	border-bottom: solid gainsboro 1px;
+	display: flex;
+}
 .comment-main{
 	width: 100%;
+	max-width: 432px;
 }
 
 .comment-subscript{
@@ -33,6 +39,12 @@
 	cursor: pointer;
 	border: none;
 }
+.comment-like{
+	margin-right: 10px;
+	background-color: #e8e8e8;
+	cursor: pointer;
+	border: none;
+}
 .comment-userimg{
 	width: 32px;
 	height: 32px;
@@ -40,6 +52,9 @@
 }
 .comment-context{
 	padding-top: 5px;	
+}
+.comment-context *{
+	white-space: pre-wrap;
 }
 .comment_text{
 	margin-bottom: 5px;
@@ -53,10 +68,12 @@
 }
 
 .comment-input{
+	position: relative;
 	width: 90%;
 	margin: auto;
 	background-color: #ffffff;
 	margin-top: 20px;
+	padding:10px;
 }
 .comment-input textarea{
 	width: 100%;
@@ -98,6 +115,7 @@
 }
 .comment_context_img{
 	margin-top: 5px;
+	max-width: 100%;
 }
 .comment_preimg_delete{
 	position:absolute;
@@ -127,4 +145,22 @@
 }
 .comment_preimg_delete::after{
 	transform: rotate(-45deg);
+}
+
+.temp{
+	cursor: pointer;
+}
+.recomment_target_preview{
+	margin: 5px;
+	margin-bottom: 10px;
+	font-size: 1em;
+	font-weight: 700;
+}
+
+.recomment_target{
+	font-size: 1em;
+	font-weight: 700;
+	margin-right: 5px;
+	color:#262daf;
+	text-decoration: underline;
 }
