--- a/humorpage/src/static/css/Board.css
+++ b/humorpage/src/static/css/Board.css
@@ -11,14 +11,14 @@
     margin-top: 3px;
     font-size:0.8em;
 }
-.content_top{
+.board_top{
     display: flex;
     margin-top: 10px;
 }
-.content{
+.board{
     margin: 8px 5px 8px 5px;
 }
-.content_title{
+.board_title{
     border-top: 0px;
     border-left: 0px;
     border-right: 0px;
@@ -27,7 +27,7 @@
     font-weight: normal;
     border-bottom: 1px solid rgba(94, 93, 93, 0.418);
 }
-.content_top_center{
+.board_top_center{
     padding-left: 1em;
 }
 .see_detail{
@@ -48,7 +48,7 @@
     justify-content: space-between;
     margin-top: 3px;
 }
-.content_btn{
+.board_btn{
     display: flex;
     justify-content: space-evenly;
     width: 33%;
@@ -56,7 +56,7 @@
     border: 0px;
     background-color: #e7e6e1;
 }
-.content_btn:hover{
+.board_btn:hover{
     background-color:#aaaaaa;
 }
 
