숫자 단위화, 게시글 작성시간

--- a/humorpage/src/static/css/Board.css
+++ b/humorpage/src/static/css/Board.css
@@ -66,6 +66,13 @@
 .like_on:hover{
     background-color: #f875aa;
 }
+.board_thumbnail{
+    display: flex;
+}
+.board_thumbnail_text{
+    font-size: 1.2em;
+    padding: 10px;
+}
 .board_thumbnail_img{
     max-height: 240px;
     width: auto;
