--- a/humorpage/src/static/css/App.css
+++ b/humorpage/src/static/css/App.css
@@ -74,18 +74,26 @@ button:focus{
 	margin-bottom: auto;
 }
 .footer{
-	position: sticky;
+	position: fixed;
 	z-index: 1;
 	background-color: #dfdede;
+	border-top: solid rgb(190, 190, 190) 1px;
 	width: 100%;
+	max-width: 559px;
 	bottom: 0;
 	max-height: 50px;
+	line-height: 200%;
 	display: flex;
 }
-.upload_btn{
-	margin-left:auto;
+.goNext{
+	cursor: pointer;
+	margin-left: auto;
+	background-color: #dfdede;
 	margin-right: 30px;
-	line-height: 200%;
+}
+.upload_btn{
+	margin-left: 30px;
+	margin-right: auto;
 }
 .main{
 	width: 100%;
