--- a/humorpage/src/static/css/Mypage.css
+++ b/humorpage/src/static/css/Mypage.css
@@ -81,9 +81,40 @@
     position: relative;
     cursor: pointer;
     width: min-content;
+    border: solid 1px #dddddd;
+    margin: 10px;
 }
 .myprofile_pencil{
     position: absolute;
     right: 0;
-    top: 0;
+    bottom: 5px;
+}
+.profileimg_delete{
+	position:absolute;
+	top:-10px;
+	right:-10px;
+	width: 35px;
+	height: 35px;
+	border-radius: 18px;
+	border: 0px;
+	opacity: 0.6;
+	z-index: 1;
+}
+.profileimg_delete:hover{
+	opacity: 1;
+}
+.profileimg_delete::before, .profileimg_delete::after{
+	position:absolute;
+	left: 16px;
+	bottom: 0px;
+	content: ' ';
+	height: 35px;
+	width: 2px;
+	background-color: #333;
+}
+.profileimg_delete::before{
+	transform: rotate(45deg);
+}
+.profileimg_delete::after{
+	transform: rotate(-45deg);
 }
