--- a/humorpage/src/static/css/Comment.css
+++ b/humorpage/src/static/css/Comment.css
@@ -47,8 +47,8 @@
 	border: none;
 }
 .comment-userimg{
-	width: 32px;
-	height: 32px;
+	max-width: 32px;
+	max-height: 32px;
 	border-radius: 16px;
 	margin: 0px 10px 10px 5px;
 }
