--- a/humorpage/src/static/css/Editor.css
+++ b/humorpage/src/static/css/Editor.css
@@ -8,10 +8,12 @@ display: none;
     margin:10px 10px 10px 10px;
 }
 .ql-editor .ql-video{
-    display: block;
-    max-width: 100%;
-    max-height: 100%;
-    width: 100%;
+    position: relative;
+    height: 500px;
+    width: 500px;
+    display: flex;
+    justify-content: center;
+    background: black;
 }
 .ql-editor .ql-prevideo{
     position: relative;
