update: 	-Sidebar scroll event 제거 -> position:sticky로 변경 	-Sidebar Board 공백 조정, Header<->Main 공백 조정 	-Board Title border-bottom opacity 수정 	-BoardControlOptions(delete, update) 수정 todo: 	-history.push 수정 필요 -> SPA에 맞게 페이지 팝업

--- a/humorpage/src/static/css/Normalize.css
+++ b/humorpage/src/static/css/Normalize.css
@@ -193,7 +193,9 @@
   svg:not(:root) {
     overflow: hidden;
   }
-  
+  *:focus{
+    outline: none!important;
+  }
   /* Grouping content
      ========================================================================== */
   
