--- a/humorpage/src/static/css/Editor.css
+++ b/humorpage/src/static/css/Editor.css
@@ -70,3 +70,15 @@ display: none;
     padding-top: 10px;
     padding-bottom: 10px;
 }
+.playBtn{
+    content: "";
+    width: 20px;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    border-top: 25px solid transparent;
+    border-bottom: 25px solid transparent;
+    border-left: 35px solid black;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
