update: 	React : upload, update 개선 update-next: 	React : context 파서 구현 todo: 	-React : 글->파서->이미지 파일 추출-> 	-샤딩 	-history.push 수정 필요 -> SPA에 맞게 페이지 팝업 및 불필요한 push 제거 	-Spring boot Cookie samesite설정 	-유저 nickname 길이 제한 	-React redux vs mobx 사용 	-throttle, debounce 적용 (utils에 구현) 	Spring boot : Isolation level 조정 	Spring boot : mariadb 튜닝 	React : up btn 구현

--- a/humorpage/src/static/css/Board.css
+++ b/humorpage/src/static/css/Board.css
@@ -19,8 +19,7 @@
 }
 .board_video{
     position: relative;
-    height: 500px;
-    width: 500px;
+    min-height: 500px;
     display: flex;
     justify-content: center;
     background: black;
