--- a/humorpage/src/static/css/Editor.css
+++ b/humorpage/src/static/css/Editor.css
@@ -15,6 +15,26 @@
     justify-content: center;
     background: black;
 }
+.ql-img-div{
+    position: relative;
+    width:100%;
+}
+.ql-img-div img{
+    width: 100%;
+    position:absolute;
+    left:0px;
+    top:0px;
+    /* opacity: 0;
+    transition: opacity 1s linear; */
+}
+.ql-img-div img.loaded{
+    opacity: 1;
+}
+.ql-img-small{
+    filter: blur(50px);
+    transform: scale(1);
+}
+
 .ql-editor .ql-prevideo{
     position: relative;
     height: 500px;
