update: 	total: 	thumbnailImg column 변경  img url -> html context(video) 		video codec 변경 => HLS protocol 사용 		모든 비디오 thumbnail 생성 		content에서 html video element 삭제=> parent element dataset에 저장
	spring:	board Model

update-next:
	React : HLSPlayer 적용
	React : 이미지 lazy loading 구현

--- a/humorpage/src/static/css/Editor.css
+++ b/humorpage/src/static/css/Editor.css
@@ -35,7 +35,7 @@
     transform: scale(1);
 }
 
-.ql-editor .ql-prevideo{
+.ql-editor .video-preview{
     position: relative;
     height: 500px;
     display: flex;
