--- a/mobile/src/static/css/Board.css
+++ b/mobile/src/static/css/Board.css
@@ -1,12 +1,3 @@
-.board_title{
-    border-top: 0px;
-    border-left: 0px;
-    border-right: 0px;
-    margin: 10px 0 10px 0;
-    font-size: 1.5rem;
-    font-weight: normal;
-    border-bottom: 1px solid rgba(94, 93, 93, 0.418);
-}
 .buttons{
     display: -webkit-box;
     display: -moz-box;
@@ -17,14 +8,20 @@
     justify-content: space-between;
     margin-top: 3px;
 }
-.board_video{
-    position: relative;
-    height: 500px;
-    width: 500px;
-    display: flex;
-    justify-content: center;
-    background: black;
-}
 #ql{
     margin-bottom: 5px;
+}
+.boardIframeZone{
+    position: relative;
+    padding-top: 56.25%;
+    width: 100%;
+}
+.boardIframe{
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
 }
