--- a/mobile/src/static/css/Normalize.css
+++ b/mobile/src/static/css/Normalize.css
@@ -183,6 +183,7 @@
   
   img {
     border: 0;
+    border-radius: 1px;
   }
   
   /**
@@ -192,7 +193,9 @@
   svg:not(:root) {
     overflow: hidden;
   }
-  
+  *:focus{
+    outline: none!important;
+  }
   /* Grouping content
      ========================================================================== */
   
